Fixed sections in the video and art pages being compressed to the left on mobile, made another attempt to fix the vertical spacing on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,10 +277,11 @@ section video {
 
 /* Responsive Adjustments */
 @media (max-width: 767.98px) {
-  section img,
-  section video {
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
+  section .col-md-6 {
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
 }
 
